fix navbar to have 2 links aligned right

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,3 +25,7 @@ a {
 .portal {
 
 }
+
+.top-buffer {
+  margin-top: 20px;
+}
